rename example chase models

--- a/examples/general-example/one.tex
+++ b/examples/general-example/one.tex
@@ -36,7 +36,7 @@
         minimum width = 1cm, 
         minimum height = 0.5cm
         ] (label) at (0,-.5) {};
-    \node[] at (label.center) {$a$};
+    \node[] at (label.center) {$a_1$};
 
 
     \node[rectangle,
