--- a/examples/general-example/three.tex
+++ b/examples/general-example/three.tex
@@ -52,7 +52,7 @@
         minimum width = 1cm, 
         minimum height = 0.5cm
         ] (label) at (0,-.5) {};
-    \node[] at (label.center) {$c$};
+    \node[] at (label.center) {$a_3$};
 
 
     \path[every node/.style={font=\sffamily\small}]
