--- a/examples/general-example/two.tex
+++ b/examples/general-example/two.tex
@@ -36,7 +36,7 @@
         minimum width = 1cm, 
         minimum height = 0.5cm
         ] (label) at (0,-.5) {};
-    \node[] at (label.center) {$b$};
+    \node[] at (label.center) {$a_2$};
 
     \node[rectangle,
     minimum width = 1cm, 
