--- a/fm24.tex
+++ b/fm24.tex
@@ -111,38 +111,41 @@ sufficiency remains a work-in-progress.
 
 Here we examine \emph{protocol ordering}, an important concept related
 to sufficiency that defines when one protocol is objectively better
-than another.  The objective of attestation is establishing trust in
-the presence of an adversary who is trying to convince a relying party
-to trust something they should not.  Our objective thus becomes making
-that adversary's job as difficult as possible. We claim one protocol
-is better than another if it increases the difficulty of producing
-evidence that does not reflect the target system.
+than another.  The goal of attestation is evaluating trust by
+executing protocols that gather and appraise evidence.  The
+adversary's goal is to interfere with or avoid attestation in such a
+way that evidence never reflects a bad system.  Our objective becomes
+making that adversary's job as difficult as possible.  We claim one
+attestation protocol is better than another if it is harder to falsify
+evidence or avoid gathering evidence in a bad state.  If $P_0<P_1$
+then $P_1$ makes the adversary's job harder than $P_0$.
 
-Our protocol ordering makes several key assumptions and
-definitions. First, we consider an active adversary that is capable of
-corrupting any component of the target causing it to deviate from its
-regular behavior.  Similarly the adversary is capable of repairing any
+Our protocol ordering makes several key assumptions. First, we
+consider an active adversary that is capable of corrupting any
+component of the target causing it to deviate from its regular
+behavior.  Similarly the adversary is capable of repairing any
 component of the target system it corrupts returning it to its regular
-state. Thus, a corruption event followed by a repair event results in
-a component that is indistinguishable from the original component. The
-only exception to this is the targets root-of-trust for measurement
-(RTM) that cannot be corrupted or repaired.
+behavior. Thus, a corruption event followed by a repair event results
+in a component that is indistinguishable from the original
+component. If an adversary corrupts a component and repairs the same
+component before measurement, the adversary achieves its goal. If an
+adversary corrupts a component and measurement occurs before repair,
+the adversary is defeated. The only exception is the target's
+root-of-trust for measurement (RTM) component that we assume cannot be
+corrupted or repaired.
 
 We assume an adversary will always choose the easiest available attack
-to corrupt an attestation. Therefore, a better protocol increases the
-demands of an adversary by making the easiest available attack more
+allowed by a protocol. Therefore, a better protocol increases the
+demands of an adversary by making the easiest attack more
 difficult. For an adversary to attack an attestation protocol means to
 corrupt and repair a target system's components in a manner that
 passes appraisal and therefore evades detection at the final
-measurement event. A corrupt measurer---either a measurer that is
-itself in a corrupt state or a measurer that relies on some other
-component that is in a corrupt state---will always generate evidence
-that indicates its measurement target is in its regular state. While a
-regular measurer will generate evidence that accurately reflects the
-corruption state of its target. Our analysis relies solely on the
-structure of possible attacks and is agnostic to the specific details
-of how an adversary can corrupt or repair system components as
-required by an attack.
+measurement event.  We assume a good measurer invoked by an
+attestation protocol will generate evidence that accurately reflects
+the corruption state of its target.  Our analysis relies solely on the
+structure protocols and possible attacks and is agnostic to the
+specific details of how an adversary can corrupt or repair system
+components.
 
 % Considering these assumptions, the formalized model and subsequent analysis support the following two principles.
 
@@ -557,7 +560,34 @@ These examples demonstrate the applicability of our ordering approach to example
 \section{Conclusion}
 %% TODO: Conclusion
 
+Remote attestation is a process of gathering and appraising evidence
+reflecting a system's behavior.  Attacks on remote attestation include
+attempts to hide nefarious behavior by avoiding measurement.
+Specifically, executing attacks and cleaning up prior to measurement
+or avoiding measurement completely.  Inspired by
+\citet{Rowe:2021:OnOrdering} and using the Chase model
+finder~\citep{Ramsdell:2020:Chase} we have developed and verified a
+partial ordering for attestation protocols.  This ordering reflects
+relative resistance to attacking protocols by avoiding measurement.
+We say that $P_0\leq P_1$ if avoiding measurement by $P_1$ is at least
+as hard as $P_0$.  Our ordering is based on comparing the easiest
+allowed attack.  Assuming the adversary always chooses the easiest
+attach, $P_0\leq P_1$ if the easiest attack allowed by $P_1$ is at
+least as hard as the easiest attack allowed by $P_0$.
 
+Our ordering is useful as a static design metric and a dynamic
+negotiation metric.  During protocol design ordering helps establish
+when design changes truly impact the quality or strength of a
+protocol.  During protocol negotiation~\citep{Fritz:2023:framework}
+the ordering allows an appraiser to choose a best protocol from a
+proposal generated by a target.
+
+Next up is looking at the quality of individual measurements.  This
+work examined only measurement event ordering without consideration of
+what evidence measurements gather.  We are now working on techniques for
+evaluating individual and composite measurement quality that will
+integrate with this work, ultimately providing a mechanism for fully
+comparing and assessing the quality of attestation protocols.
 
 
 
